# BasicOfProgrammingCourse

./: CMakeLists.txt  lab19  main.c  task1.c  task10.c  task11.c  task12.c  task13.c  task14.c  task15.c  task2.c  task3.c  task4.c  task5.c  task6.c  task7.c  task8.c  task9.c  test.c
libs/data_structures/matrix/: matrix.c  matrix.h
libs/data_structures/string/: string_.c  string_.h
libs/data_structures/vector/: CMakeLists.txt  vector.c  vector.h
